<resources>
    <string name="app_name">Airvet Take Home Coding</string>

    <string name="error_message">Oh dear we are unable to fetch random user for you. Maybe your not connected with internet!</string>
    <string name="retry">Retry</string>
    <string name="random_user_detail_header">Detail Info about Random User </string>



    <string name="person_name">Person Name -</string>
    <string name="person_gender">Gender -</string>
    <string name="person_city">City -</string>
    <string name="person_state">State -</string>
    <string name="person_country">Country -</string>

    <string name="transition_name">Random User Card</string>
    <string name="random_user_name">Ms Emmi Anttila</string>
    <string name="picture">Picture</string>

</resources>

