<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userDetails"
            type="com.robelseyoum.airvettakehomecoding.data.model.Results" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/activity_user_detailed_base_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/activity_movie_detailed_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_layout_height">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/activity_movie_detailed_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <ImageView
                    android:id="@+id/activity_movie_detailed_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_layout_height"
                    android:contentDescription="@string/picture"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    android:transitionName="@string/transition_name"
                    app:imageUrl="@{userDetails}"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/ic_launcher_background" />

                <Toolbar
                    android:id="@+id/activity_user_detailed_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/activity_movie_detailed_base_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/status_root"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/padding_default_dp"
                    android:layout_marginTop="@dimen/padding_default_dp"
                    android:layout_marginEnd="@dimen/padding_default_dp"
                    android:background="?selectableItemBackground"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_eight_dp">

                        <TextView
                            android:id="@+id/personName_text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/padding_three_halves_dp"
                            android:text="@string/person_name"
                            android:textAppearance="?textAppearanceBody1" />

                        <TextView
                            android:id="@+id/person_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:randomNameString="@{userDetails}"
                            tools:text="Person name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_eight_dp">

                        <TextView
                            android:id="@+id/person_gender_text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/padding_three_halves_dp"
                            android:text="@string/person_gender"
                            android:textAppearance="?textAppearanceBody1" />

                        <TextView
                            android:id="@+id/gender_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:detailGenderString="@{userDetails}"
                            tools:text="Gender" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_eight_dp">

                        <TextView
                            android:id="@+id/city_text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/padding_three_halves_dp"
                            android:text="@string/person_city"
                            android:textAppearance="?textAppearanceBody1" />

                        <TextView
                            android:id="@+id/city_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:detailCityString="@{userDetails}"
                            tools:text="City" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_eight_dp">

                        <TextView
                            android:id="@+id/state_text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/padding_three_halves_dp"
                            android:text="@string/person_state"
                            android:textAppearance="?textAppearanceBody1" />

                        <TextView
                            android:id="@+id/state_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:detailStateString="@{userDetails}"
                            tools:text="State" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_eight_dp">

                        <TextView
                            android:id="@+id/country_text_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/padding_three_halves_dp"
                            android:text="@string/person_country"
                            android:textAppearance="?textAppearanceBody1" />

                        <TextView
                            android:id="@+id/state_text_"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:detailCountryString="@{userDetails}"
                            tools:text="Country" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>